--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -26,6 +26,7 @@
           &copy; <span>2018</span> <span th:text="#{brand.author}">author</span>
       </span>
     </div>
+    <script th:src="@{/webjars/font-awesome/svg-with-js/js/fontawesome-all.min.js}"></script>
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
