Create delete modal fragment. * This fragment allows to have a confirm step before a delete action takes place. * Links or other elements only need the data-action and data-name set to   enable   1. confirm a textfield value matches the data-name value before the submit button is enabled   2. Do some action from data-action as GET request after that

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -30,6 +30,7 @@
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script th:src="@{/js/modals.js}"></script>
   </footer>
 </body>
 </html>
