--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -31,6 +31,7 @@
     <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     <script th:src="@{/js/modals.js}"></script>
+    <script th:src="@{/js/peerpub.js}"></script>
   </footer>
 </body>
 </html>
