layout.html: add parameter to footer fragment to include custom javascript within it.

--- a/src/main/resources/templates/doc/attribute/addedit.html
+++ b/src/main/resources/templates/doc/attribute/addedit.html
@@ -47,6 +47,6 @@
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </main>
-<footer th:replace="layout :: footer">Footer goes here</footer>
+<footer th:replace="layout :: footer(_)">Footer goes here</footer>
 </body>
 </html>
