--- a/src/main/resources/templates/doc/attribute/list.html
+++ b/src/main/resources/templates/doc/attribute/list.html
@@ -52,6 +52,6 @@
       </div>
     </div>
   </main>
-  <footer th:replace="layout :: footer">Footer goes here</footer>
+  <footer th:replace="layout :: footer(_)">Footer goes here</footer>
 </body>
 </html>
