--- a/src/main/resources/templates/doc/doctype/list.html
+++ b/src/main/resources/templates/doc/doctype/list.html
@@ -100,6 +100,6 @@
     </div>
   </div>
 </main>
-<footer th:replace="layout :: footer">Footer goes here</footer>
+<footer th:replace="layout :: footer(_)">Footer goes here</footer>
 </body>
 </html>
