Enable editing of document types for admins.
* Add `addedit.html` as view template
* peerpub.css: added `del` class that stlyes as striked text
* Adding i18n messages for editing doc types
* DocTypeAdminCtrl:
   1. Make constructor rely on all necessary components explictly. Needed for testing and coverage.
   2. Add Attribute HashMap as @ModelAttribute method, so it will always be transfered for convinience
   3. Add request handlers for getting and posting the edit form. Uses the DocTypeService to handle the database access.
   4. Add Spring validator for the DocTypeForm data binding from the form model attribute with @InitBinder.

--- a/src/main/resources/static/css/peerpub.css
+++ b/src/main/resources/static/css/peerpub.css
@@ -1,5 +1,10 @@
 /* PeerPub Stylesheet */
 
+/* Deleted style class */
+.del {
+  text-decoration: line-through;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
