Add navigation link to funding award listing

--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -28,6 +28,9 @@
                 <a class="dropdown-item"
                    href="#" th:href="${#mvc.url('DTAC#list').build()}"
                    th:text="#{menu.admin.doctypes}">Document types</a>
+                <a class="dropdown-item"
+                   href="#" th:href="${#mvc.url('FAAC#list').build()}"
+                   th:text="#{menu.admin.funding.awards}">Funding awards</a>
               </div>
             </li>
           </ul>
